shipping/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shipping
spec:
  host: shipping
  subsets:
    - name: v1
      labels:
        version: v1
