shipping/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shipping
spec:
  hosts:
    - shipping
  http:
    - route:
        - destination:
            host: shipping
            subset: v1
